added description component

--- a/src/styles/Styles.sass
+++ b/src/styles/Styles.sass
@@ -22,7 +22,7 @@ table
   height: 80vh
 
 table, th, td
-  animation: slide-up 0.8s ease
+  //animation: slide-up 0.8s ease
 
 th, td
   margin: 10px
@@ -51,3 +51,13 @@ th, td
 .element_wrapper
   display: flex
   flex-direction: column
+
+.description__pictures
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+
+.description__wrapper
+  display: flex
+  flex-direction: column
+  max-width: 900px
