--- a/src/styles/Styles.sass
+++ b/src/styles/Styles.sass
@@ -15,13 +15,22 @@ h1
   justify-content: center
   align-items: center
 
+.btn__wrapper_description
+  display: flex
+  justify-content: flex-start
+  align-items: center
+
 .btn__wrapper button, th, td
   margin: 10px
 
 table
   height: 80vh
+  width: 1000px
+  border-collapse: collapse
 
 table, th, td
+  border: 1px solid black
+  text-align: center
   //animation: slide-up 0.8s ease
 
 th, td
@@ -60,4 +69,18 @@ th, td
 .description__wrapper
   display: flex
   flex-direction: column
-  max-width: 900px
+  max-width: 1000px
+  border: 1px solid black
+  margin-bottom: 10px
+  padding: 10px
+
+tr.event_table_row
+  padding-left: 5px
+  padding-right: 5px
+
+tr.event_table_row:hover
+  background-color: #08fdd8
+  cursor: pointer
+
+tr.table-active td
+  //border-bottom: 1pt solid black
