moved events list to separate class

--- a/src/styles/Styles.sass
+++ b/src/styles/Styles.sass
@@ -84,3 +84,12 @@ tr.event_table_row:hover
 
 tr.table-active td
   //border-bottom: 1pt solid black
+
+
+.tag
+  color: white
+  background-color: black
+  padding: 5px
+  border-radius: 5px
+  margin: 10px
+  white-space: nowrap
